--- a/plantist/android/build.gradle
+++ b/plantist/android/build.gradle
@@ -1,8 +1,19 @@
+buildscript{
+    repositories{
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.4.2'
+    }
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
+
     
 }
 
@@ -17,3 +28,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
